# plate-access-control

./: .env.example  .gitignore  CMakeLists.txt  README.md  build_raspberry_pi.sh  configure_reader.sh  controller  discover_server.sh  install_controller.sh  start_reader.sh
config/: gate.env.example
database/: README.md  init_database.sh  schema.sql
docs/: GATE_CONTROL_PLAN.md  GATE_WIRING_DIAGRAM.md
src/: gate_controller.cpp  gate_controller.hpp  gate_gpio.cpp  gate_gpio.hpp  gate_simulator.cpp  main.cpp
tests/: gate_controller_tests.cpp
web/: app.py  requirements.txt  setup_web.sh  start_web.sh
web/static/: dashboard.js  notifications.js  styles.css
web/templates/: base.html  dashboard.html  login.html  logs.html  setup.html  user_form.html  users.html  vehicle_form.html  vehicles.html
