cmake_minimum_required(VERSION 3.18)
project(plate_reader_cpp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(PLATE_ENABLE_CAMERA "Build real-time camera support" ON)
option(PLATE_RASPBERRY_PI "Tune the build for Raspberry Pi 4" OFF)

set(PLATE_OPENCV_COMPONENTS core imgproc imgcodecs dnn)
if(PLATE_ENABLE_CAMERA)
    list(APPEND PLATE_OPENCV_COMPONENTS videoio highgui)
endif()
find_package(OpenCV REQUIRED COMPONENTS ${PLATE_OPENCV_COMPONENTS})
if(OpenCV_VERSION VERSION_LESS "4.10")
    message(FATAL_ERROR "OpenCV 4.10 or newer is required (found ${OpenCV_VERSION})")
endif()

add_executable(plate_reader src/main.cpp)
target_link_libraries(plate_reader PRIVATE ${OpenCV_LIBS})
target_include_directories(plate_reader PRIVATE ${OpenCV_INCLUDE_DIRS})
if(PLATE_ENABLE_CAMERA)
    find_package(SQLite3 REQUIRED)
    target_compile_definitions(plate_reader PRIVATE PLATE_ENABLE_CAMERA=1)
    if(TARGET SQLite3::SQLite3)
        target_link_libraries(plate_reader PRIVATE SQLite3::SQLite3)
    else()
        target_link_libraries(plate_reader PRIVATE SQLite::SQLite3)
    endif()
endif()

if(PLATE_RASPBERRY_PI AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(plate_reader PRIVATE -mcpu=cortex-a72)
endif()
